--- a/k80.md
+++ b/k80.md
@@ -9,8 +9,7 @@ description: Tesla K80 processor
 **Device query**
 
 ```
-$ ./deviceQuery 
-
+$ ./deviceQuery
 ./deviceQuery Starting...
 
  CUDA Device Query (Runtime API) version (CUDART static linking)
@@ -18,7 +17,7 @@ $ ./deviceQuery
 Detected 1 CUDA Capable device(s)
 
 Device 0: "Tesla K80"
-  CUDA Driver Version / Runtime Version          10.1 / 10.0
+  CUDA Driver Version / Runtime Version          10.2 / 10.2
   CUDA Capability Major/Minor version number:    3.7
   Total amount of global memory:                 11441 MBytes (11996954624 bytes)
   (13) Multiprocessors, (192) CUDA Cores/MP:     2496 CUDA Cores
@@ -40,7 +39,7 @@ Device 0: "Tesla K80"
   Maximum memory pitch:                          2147483647 bytes
   Texture alignment:                             512 bytes
   Concurrent copy and kernel execution:          Yes with 2 copy engine(s)
-  Run time limit on kernels:                     Yes
+  Run time limit on kernels:                     No
   Integrated GPU sharing Host Memory:            No
   Support host page-locked memory mapping:       Yes
   Alignment requirement for Surfaces:            Yes
@@ -53,14 +52,13 @@ Device 0: "Tesla K80"
   Compute Mode:
      < Default (multiple host threads can use ::cudaSetDevice() with device simultaneously) >
 
-deviceQuery, CUDA Driver = CUDART, CUDA Driver Version = 10.1, CUDA Runtime Version = 10.0, NumDevs = 1
+deviceQuery, CUDA Driver = CUDART, CUDA Driver Version = 10.2, CUDA Runtime Version = 10.2, NumDevs = 1
 Result = PASS
 ```
 
 **Bandwidth tests**
 ```
-$ ./bandwidthTest
-
+$ ./bandwidthTest 
 [CUDA Bandwidth Test] - Starting...
 Running on...
 
@@ -69,20 +67,18 @@ Running on...
 
  Host to Device Bandwidth, 1 Device(s)
  PINNED Memory Transfers
-   Transfer Size (Bytes)	Bandwidth(MB/s)
-   33554432			10634.3
+   Transfer Size (Bytes)	Bandwidth(GB/s)
+   32000000			8.0
 
  Device to Host Bandwidth, 1 Device(s)
  PINNED Memory Transfers
-   Transfer Size (Bytes)	Bandwidth(MB/s)
-   33554432			11650.9
+   Transfer Size (Bytes)	Bandwidth(GB/s)
+   32000000			10.0
 
  Device to Device Bandwidth, 1 Device(s)
  PINNED Memory Transfers
-   Transfer Size (Bytes)	Bandwidth(MB/s)
-   33554432			156032.5
+   Transfer Size (Bytes)	Bandwidth(GB/s)
+   32000000			156.8
 
 Result = PASS
-
-NOTE: The CUDA Samples are not meant for performance measurements. Results may vary when GPU Boost is enabled.
 ```
